Move some more files into subdirectories.
While I'm in the mood for cleaning up the top-level directory here:
all the 'nostuff.c' files have moved into a new 'stubs' directory, and
I broke up be_misc.c into smaller modules that can live in 'utils'.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_sources_from_current_dir(utils
   antispoof.c
+  backend_socket_log.c
   base64_decode_atom.c
   base64_encode_atom.c
   bufchain.c
@@ -23,6 +24,7 @@ add_sources_from_current_dir(utils
   host_strcspn.c
   host_strduptrim.c
   host_strrchr.c
+  log_proxy_stderr.c
   marshal.c
   memory.c
   memxor.c
