Move fuzzterm.c into the test subdirectory.
It's unquestionably a test program, and I'm generally clearing those
out of the top level. I only missed it in the last clearout because I
was looking for things with 'test' in the name.

--- a/unix/CMakeLists.txt
+++ b/unix/CMakeLists.txt
@@ -48,7 +48,7 @@ add_sources_from_current_dir(agent
   agent-client.c)
 
 add_executable(fuzzterm
-  ${CMAKE_SOURCE_DIR}/fuzzterm.c
+  ${CMAKE_SOURCE_DIR}/test/fuzzterm.c
   ${CMAKE_SOURCE_DIR}/logging.c
   ${CMAKE_SOURCE_DIR}/stubs/noprint.c
   unicode.c
