Remove a redundant file in utils.
At some point while setting up the utils subdirectory, I apparently
only got half way through renaming miscucs.c to dup_mb_to_wc.c: I
created the new copy of the file, but I didn't delete the old one, I
didn't mention it in utils/CMakeLists.txt, and I didn't change the
comment at the top.

Now done all three, so we now have just one copy of this utility
module.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -16,6 +16,7 @@ add_sources_from_current_dir(utils
   dupcat.c
   dupprintf.c
   dupstr.c
+  dup_mb_to_wc.c
   encode_utf8.c
   encode_wide_string_as_utf8.c
   fgetline.c
@@ -28,7 +29,6 @@ add_sources_from_current_dir(utils
   marshal.c
   memory.c
   memxor.c
-  miscucs.c
   null_lp.c
   nullseat.c
   nullstrcmp.c
