Windows Pageant and PuTTYgen: spiff up option parsing.
These two tools had ad-hoc command loops with similar options, and I
want to extend both (in particular, in a way that introduces options
with arguments). So I've started by throwing together some common code
to do all the tedious bits like finding option arguments wherever they
might be, throwing errors, handling "--" and so on.

Should be no functional change to the existing command-line syntax,
except that now all long options are recognised in both "-foo" and
"--foo" form.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -4,6 +4,7 @@ add_sources_from_current_dir(utils
   utils/agent_mutex_name.c
   utils/agent_named_pipe_name.c
   utils/arm_arch_queries.c
+  utils/aux_match_opt.c
   utils/cryptoapi.c
   utils/defaults.c
   utils/dll_hijacking_protection.c
