Support AF_UNIX listening sockets on Windows.
Not all Windows toolchains have this yet, so we have to put the
whole lot under #ifdef.

--- a/cmake/cmake.h.in
+++ b/cmake/cmake.h.in
@@ -8,6 +8,7 @@
 #cmakedefine01 HAVE_WINRES_H
 #cmakedefine01 HAVE_WIN_H
 #cmakedefine01 HAVE_NO_STDINT_H
+#cmakedefine01 HAVE_AFUNIX_H
 #cmakedefine01 HAVE_GCP_RESULTSW
 #cmakedefine01 HAVE_ADDDLLDIRECTORY
 #cmakedefine01 HAVE_GETNAMEDPIPECLIENTPROCESSID
