--- a/cmake/cmake.h.in
+++ b/cmake/cmake.h.in
@@ -13,6 +13,7 @@
 #cmakedefine01 HAVE_GETNAMEDPIPECLIENTPROCESSID
 #cmakedefine01 HAVE_SETDEFAULTDLLDIRECTORIES
 #cmakedefine01 HAVE_STRTOUMAX
+#cmakedefine01 HAVE_DWMAPI_H
 
 #cmakedefine NOT_X_WINDOWS
 
