Make ssh_keyalg's supported_flags a method.
It's a class method rather than an object method, so it doesn't allow
keys with the same algorithm to make different choices about what
flags they support. But that's not what I wanted it for: the real
purpose is to allow one key algorithm to delegate supported_flags to
another, by having its method implementation call the one from the
delegate class.

(If only C's compile/link model permitted me to initialise a field of
one global const struct variable to be a copy of that of another, I
wouldn't need the runtime overhead of this method! But object file
formats don't let you even specify that.)

Most key algorithms support no flags at all, so they all want to use
the same implementation of this method. So I've started a file of
stubs utils/nullkey.c to contain the common stub version.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -35,6 +35,7 @@ add_sources_from_current_dir(utils
   memory.c
   memxor.c
   null_lp.c
+  nullkey.c
   nullseat.c
   nullstrcmp.c
   out_of_memory.c
