Windows: utility function to centre a window.
This was called from config box setup, and is obviously the kind of
thing that ought to be a reusable utility function.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -5,6 +5,7 @@ add_sources_from_current_dir(utils
   utils/agent_named_pipe_name.c
   utils/arm_arch_queries.c
   utils/aux_match_opt.c
+  utils/centre_window.c
   utils/cryptoapi.c
   utils/defaults.c
   utils/dll_hijacking_protection.c
