New utility function base64_valid().
For when you want to tell the difference between a base64-encoded
string and some other kind of string that might replace it.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -5,6 +5,7 @@ add_sources_from_current_dir(utils
   base64_decode.c
   base64_encode_atom.c
   base64_encode.c
+  base64_valid.c
   bufchain.c
   buildinfo.c
   burnstr.c
