Utility function to do terminal word wrapping.
I'm planning to use this to replace some of the manually wrapped lines
in console messages.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -70,6 +70,7 @@ add_sources_from_current_dir(utils
   version.c
   wcwidth.c
   wildcard.c
+  wordwrap.c
   write_c_string_literal.c
   x11authfile.c
   x11authnames.c
